# sprintflow

./: .env  .gitignore  app_flow_diagram.txt  image_flow_diagram.txt  mermaid_code.txt
app/: database.py  schemas.py
app/routes/: admin_routes.py  github_routes.py  meeting_routes.py  status_routes.py
backend/: pyproject.toml
backend/app/: main.py
backend/app/llm/: priority_agent.py
backend/app/routes/: ai_routes.py  auth_routes.py  github_routes.py  meeting_routes.py  ticket_routes.py  workspace_routes.py
backend/app/services/: dependency_service.py  ticket_service.py
backend/storage/: tickets.json
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.jsx  TaskGraph.jsx  index.css
